--- a/index.html
+++ b/index.html
@@ -8,3 +8,17 @@
     <link href="style.css"type="text/css"rel="stylesheet">
     <link rel ="icon" href ="https://img.icons8.com/glyph-neue/2x/facebook-new.png" type ="image/svg+xml">
 </head>
+<body>
+    <div class="global-container">
+        <div class="main-body">
+            <div class="left-body">
+                <div class="logo">
+                <img class="logo-image" src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg">
+                </div>
+                <h2 class="facebook-text">Facebook helps you connect and share with the people in your life.</h2>
+
+            </div>
+        </div>
+    </div>
+</body>
+</html>
