created right body

--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
                 <h2 class="facebook-text">Facebook helps you connect and share with the people in your life.</h2>
 
             </div>
+            <div class="right-body">
+                <div class="login">
+                    <div class="login-box">
+                        <form>
+                            <div class="login-controls">
+                            <input class="email-password" type="text"placeholder="Email address or phone number"><br><br>
+                            <input class="email-password" type="text"placeholder="Password"><br><br>
+                            <button class="login-button">Log In</button><br><br>
+                            <a class="forgotten" href="https://www.facebook.com/">Forgotten password?</a>
+                            <div class="line"></div>
+                        </form>
+                    <button class="create-button">Create New Account</button>
+                    </div>
+                    <div class="under-box">
+                        <p class="text-under-box"><a class="create-link" href="https://www.facebook.com/">Create a Page</a> for a celebrity, brand or business.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
