--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     </div>
                 </div>
             </div>
+            <p class="footer">Meta © 2022</p>
         </div>
     </div>
 </body>
